<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>fastdds_monitor</name>
  <!-->There must be a release. Update version accordingly<-->
  <version>1.2.1</version>
  <description>
    Qt application written in C++ that plot the data from the Fast DDS Statistics Backend.
  </description>
  <!-->Update maintainer information<-->
  <maintainer email="RaulSanchezMateos@eprosima.com">Raul Sánchez-Mateos</maintainer>
  <maintainer email="javierparis@eprosima.com">Javier París</maintainer>
  <maintainer email="juanlopez@eprosima.com">Juan López</maintainer>
  <license file="LICENSE">GNU general public license</license>

  <url type="website">https://www.eprosima.com/</url>
  <url type="bugtracker">https://github.com/eProsima/Fast-DDS-monitor/issues</url>
  <url type="repository">https://github.com/eProsima/Fast-DDS-monitor</url>

  <depend>fastcdr</depend>
  <depend>fastrtps</depend>
  <depend>fastdds_statistics_backend</depend>

  <buildtool_depend>cmake</buildtool_depend>

  <doc_depend>doxygen</doc_depend>
  <doc_depend>Sphinx</doc_depend>

  <export>
    <build_type>cmake</build_type>
  </export>
</package>
