<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>fastdds_monitor</name>
  <!-->There must be a release. Update version accordingly<-->
  <version>3.3.0</version>
  <description>
    eProsima Fast DDS Monitor is a graphical desktop application aimed at monitoring DDS environments deployed using the eProsima Fast DDS library.
  </description>
  <!-->Update maintainer information<-->
  <maintainer email="RaulSanchezMateos@eprosima.com">Raul Sánchez-Mateos</maintainer>
  <maintainer email="juanlopez@eprosima.com">Juan López</maintainer>
  <maintainer email="carlosespinoza@eprosima.com">Carlos Espinoza</maintainer>
  <license file="LICENSE">GNU general public license</license>

  <url type="website">https://www.eprosima.com/</url>
  <url type="bugtracker">https://github.com/eProsima/Fast-DDS-monitor/issues</url>
  <url type="repository">https://github.com/eProsima/Fast-DDS-monitor</url>

  <depend>fastcdr</depend>
  <depend>fastdds</depend>
  <depend>fastdds_statistics_backend</depend>

  <buildtool_depend>cmake</buildtool_depend>

  <doc_depend>doxygen</doc_depend>
  <doc_depend>Sphinx</doc_depend>

  <export>
    <build_type>cmake</build_type>
  </export>
</package>
